<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_30"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo_top"
            app:layout_constraintBottom_toTopOf="@id/edtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            style="@style/EditTextPrimary.BorderAlto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/dp_18"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            tools:layout_editor_absoluteX="-81dp" />

        <TextView
            android:id="@+id/tvEmailError"
            style="@style/ErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_full_padding"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/double_full_padding"
            android:paddingStart="@dimen/half_padding"
            android:paddingEnd="@dimen/half_padding"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            style="@style/EditTextPrimary.BorderAlto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_18"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/dp_5"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailError" />

        <TextView
            android:id="@+id/tv_password_error"
            style="@style/ErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_full_padding"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/double_full_padding"
            android:paddingStart="@dimen/half_padding"
            android:paddingEnd="@dimen/half_padding"
            android:text=""

            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_full_padding"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_error" />

        <TextView
            android:id="@+id/tv_create_account"
            style="@style/TextLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full_quarter_padding"
            android:text="@string/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full_quarter_padding"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
